RESOLVED FIXED52468
REGRESSION (5.0.3-ToT): Scrolling text doesn't scroll in Star Wars intro animation
https://bugs.webkit.org/show_bug.cgi?id=52468
Summary REGRESSION (5.0.3-ToT): Scrolling text doesn't scroll in Star Wars intro anim...
Adam Roben (:aroben)
Reported 2011-01-14 12:20:26 PST
To reproduce: 1. Go to http://www.gesteves.com/experiments/starwars.html After the "Star Wars" text fades into the distance, the scrolling text appears. But it appears all at once, and doesn't scroll at all. This worked just great in 5.0.3.
Attachments
Patch (2.27 KB, patch)
2011-03-09 13:59 PST, Chris Marrin
no flags
Patch (2.21 KB, patch)
2011-03-11 10:38 PST, Chris Marrin
aroben: review+
Adam Roben (:aroben)
Comment 1 2011-01-14 12:20:49 PST
The text also seems to be scaled down too small.
Adam Roben (:aroben)
Comment 2 2011-01-14 12:22:03 PST
Chris Marrin
Comment 3 2011-03-09 12:37:50 PST
*** Bug 53494 has been marked as a duplicate of this bug. ***
Chris Marrin
Comment 4 2011-03-09 13:59:37 PST
Simon Fraser (smfr)
Comment 5 2011-03-09 14:04:38 PST
Comment on attachment 85227 [details] Patch We need this #ifdef because of behavior changes between SnowLeopard and later, so you can't just remove it.
Chris Marrin
Comment 6 2011-03-11 10:38:13 PST
Adam Roben (:aroben)
Comment 7 2011-03-11 10:42:53 PST
Comment on attachment 85490 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=85490&action=review > Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:1604 > +#if defined(BUILDING_ON_LEOPARD) || defined(BUILDING_ON_SNOW_LEOPARD) || defined(WIN32) PLATFORM(WIN), please. > Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:1608 > + // FIXME: This fix has not been added to the Safari Windows SDK yet (<rdar://problem/9112233>) so we expect the > + // reversed animation behavior I'd say "QuartzCore on Windows" rather than "the Safari Windows SDK".
Chris Marrin
Comment 8 2011-03-11 11:19:39 PST
Note You need to log in before you can comment on or make changes to this bug.